# fastapi_template

./: LICENSE  README.md  docker-compose.yaml
app/: pyproject.toml
app/app/admin/: app.py
app/app/admin/views/: mixins.py  user.py
app/app/api/: deps.py  pagination.py
app/app/api/v1/: api_routers.py
app/app/api/v1/endpoints/: user.py
app/app/core/: config.py  container.py  logger.py
app/app/db/: session.py
app/app/models/: user.py
app/app/models/mixins/: base.py  user.py
app/app/repositories/: base.py  user.py
app/app/schemas/: user.py
app/app/services/: user.py
app/migrations/: env.py
app/scripts/: create_super_user.py
